--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Animesh Kumar Singh <animesh.workplace@gmail.com>"]
 python = "^3.10"
 Django = "4.0.5"
 O365 = "^2.0.19"
+python-dotenv = "^0.20.0"
 
 [tool.poetry.dev-dependencies]
 
