--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -11,6 +11,7 @@ O365 = "^2.0.19"
 python-dotenv = "^0.20.0"
 django-cors-headers = "^3.13.0"
 djangorestframework = "^3.13.1"
+djangorestframework-simplejwt = "^5.2.0"
 
 [tool.poetry.dev-dependencies]
 
