--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,6 +12,7 @@ python-dotenv = "^0.20.0"
 django-cors-headers = "^3.13.0"
 djangorestframework = "^3.13.1"
 djangorestframework-simplejwt = "^5.2.0"
+Pillow = "^9.1.1"
 
 [tool.poetry.dev-dependencies]
 
