--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,6 +13,7 @@ django-cors-headers = "^3.13.0"
 djangorestframework = "^3.13.1"
 djangorestframework-simplejwt = "^5.2.0"
 Pillow = "^9.1.1"
+django-ipware = "^4.0.2"
 
 [tool.poetry.dev-dependencies]
 
