--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -16,6 +16,7 @@ Pillow = "^9.1.1"
 django-ipware = "^4.0.2"
 
 [tool.poetry.dev-dependencies]
+colorama = "^0.4.5"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
