--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -17,6 +17,7 @@ django-ipware = "^4.0.2"
 gunicorn = "^20.1.0"
 channels-redis = "^3.4.0"
 channels = "^3.0.5"
+uvicorn = "^0.18.2"
 
 [tool.poetry.dev-dependencies]
 colorama = "^0.4.5"
