--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -3,6 +3,6 @@ current_version = 0.1.0
 commit = False
 tag = False
 
-[bumpversion:file:backend/__init__.py]
+[bumpversion:file:backend/backend/__init__.py]
 [bumpversion:file:frontend/package.json]
 [bumpversion:file:frontend/package-lock.json]
