--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,8 +1,9 @@
 [bumpversion]
-current_version = 0.1.0
+current_version = 0.2.0
 commit = False
 tag = False
 
-[bumpversion:file:backend/backend/__init__.py]
 [bumpversion:file:frontend/package.json]
+[bumpversion:file:backend/pyproject.toml]
 [bumpversion:file:frontend/package-lock.json]
+[bumpversion:file:backend/backend/__init__.py]
