updated ci to handle push and pull from main branch

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -2,9 +2,9 @@ name: Django CI
 
 on:
   push:
-    branches: [ "django_ci" ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ "django_ci" ]
+    branches: [ "main" ]
 
 jobs:
   build:
