--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -19,6 +19,7 @@ channels-redis = "^3.4.0"
 channels = "^3.0.5"
 uvicorn = "^0.18.2"
 django-multiselectfield = "^0.1.12"
+mpire = "^2.4.0"
 
 [tool.poetry.dev-dependencies]
 colorama = "^0.4.5"
