--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,15 @@
   "dependencies": {
     "@nuxtjs/auth-next": "^5.0.0-1648802546.c9880dc",
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/dayjs": "^1.4.1",
+    "@nuxtjs/svg": "^0.4.0",
+    "cookie-universal-nuxt": "^2.2.1",
     "core-js": "^3.15.1",
-    "nuxt": "^2.15.7"
+    "jwt-decode": "^3.1.2",
+    "nuxt": "^2.15.7",
+    "nuxt-tailvue": "^1.0.95",
+    "simple-vue-validator": "^0.16.0",
+    "vuex-map-fields": "^1.4.1"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^4.2.0",
