--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,9 @@
     "cookie-universal-nuxt": "^2.2.1",
     "core-js": "^3.15.1",
     "d3": "^7.6.1",
+    "dayjs": "^1.11.5",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
     "nuxt": "^2.15.7",
     "nuxt-tailvue": "^1.0.95",
     "papaparse": "^5.3.2",
