--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,11 +17,15 @@
     "core-js": "^3.15.1",
     "d3": "^7.6.1",
     "dayjs": "^1.11.5",
+    "fs": "^0.0.1-security",
+    "fs-promise": "^2.0.3",
+    "fs.promises": "^0.1.2",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
     "nuxt": "^2.15.7",
     "nuxt-tailvue": "^1.0.95",
     "papaparse": "^5.3.2",
+    "redirect-ssl": "^3.0.0",
     "simple-vue-validator": "^0.16.0",
     "vuex-map-fields": "^1.4.1"
   },
